Set version to 3.0.3-13+b2.

--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -1,18 +1,22 @@
 listen=YES
 listen_ipv6=NO
 banner_file=/etc/vsftpd.banner
-
-# Allow anonymous users
-anon_root=/data
-anonymous_enable=YES
-no_anon_password=YES
-anon_upload_enable=YES
-anon_mkdir_write_enable=YES
 write_enable=YES
+local_umask=022
+
+# Logging
+vsftpd_log_file=/var/log/vsftpd.log
 
 # Prohibit local system users
 local_enable=NO
 
-# Enable logging
-vsftpd_log_file=/var/log/vsftpd.log
-xferlog_enable=YES
+# Real user for anonymous uploads
+ftp_username=nobody
+
+# Allow anonymous users
+anonymous_enable=YES
+anon_root=/data
+no_anon_password=YES
+anon_upload_enable=YES
+anon_mkdir_write_enable=YES
+anon_other_write_enable=YES
