--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -23,8 +23,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3.0.0
+        uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: ghcr.io/tetafro/vsftpd:${{ github.ref_name }}, ghcr.io/tetafro/openvpn:latest
+          tags: >
+            ghcr.io/tetafro/vsftpd:${{ github.ref_name }},
+            ghcr.io/tetafro/vsftpd:latest
