Fix permissions for anon uploads.

--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -1,8 +1,11 @@
+# https://linux.die.net/man/5/vsftpd.conf
+
 listen=YES
 listen_ipv6=NO
 banner_file=/etc/vsftpd.banner
 write_enable=YES
 local_umask=022
+anon_umask=022
 
 # Logging
 vsftpd_log_file=/var/log/vsftpd.log
